--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
     "description": "天然草本产品专家 Telegram Mini App",
     "icons": [
       {
-        "src": "/src/assets/images/icon-192x192.png",
+        "src": "./images/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/src/assets/images/icon-512x512.png",
+        "src": "./images/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
