--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "dev:https": "cross-env HTTPS=true vite",
