--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@telegram-apps/sdk": "^3.9.2",
     "@telegram-apps/sdk-react": "^3.2.4",
     "@types/react-transition-group": "^4.4.12",
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
