--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,19 +8,19 @@
     "description": "天然草本产品专家 Telegram Mini App",
     "icons": [
       {
-        "src": "/images/icon-192x192.png",
+        "src": "./images/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/images/icon-512x512.png",
+        "src": "./images/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
     ],
     "lang": "en-US",
     "orientation": "portrait",
-    "scope": "/",
+    "scope": "./",
     "prefer_related_applications": false,
     "related_applications": [{
         "platform": "telegram",
