--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,13 +28,14 @@ jobs:
         uses: actions/setup-node@v4.4.0
         with:
           node-version: 18
-          cache: 'npm'
-      - name: Clear npm cache
-        run: npm cache clean --force
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
       - name: Install dependencies
-        run: npm install
+        run: bun install
       - name: Build
-        run: npm run build
+        run: bun run build
       - name: Setup Pages
         uses: actions/configure-pages@v5.0.0
       - name: Upload artifact
