--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: pages-build-deployment
+name: Deploy static content to Pages
 
 on:
   push:
