--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "predeploy": "npm run build",
     "dev:api": "cd workers/api-worker && wrangler dev",
     "dev:r2": "cd workers/image-handler-worker && wrangler dev --port 8788",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\" \"npm run dev:r2\""
+    "dev:all": "npm-run-all --parallel dev dev:api dev:r2",
+    "deploy:r2": "cd workers/image-handler-worker && wrangler deploy",
+    "deploy:api": "cd workers/api-worker && wrangler deploy",
+    "deploy:workers": "npm run deploy:api && npm run deploy:r2",
+    "deploy:all": "npm run build && npm run deploy:workers && npm run deploy"
   },
   "dependencies": {
     "@telegram-apps/sdk": "^3.9.2",
@@ -29,6 +33,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250604.0",
     "@types/node": "^22.15.21",
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.7",
@@ -39,6 +44,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.1.1",
+    "npm-run-all": "^4.1.5",
     "terser": "^5.39.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
