--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
 VITE_API_WORKER_URL=https://herbalshop-api-worker.ghostg-g.workers.dev
 VITE_R2_IMAGE_HANDLER_URL=https://herbalshop-image-handler.ghostg-g.workers.dev
+
+VITE_BASE_URL=/herbalShop/
+VITE_API_URL=https://herbalshop.365idesign.uk
