--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev": "vite",
     "build": "tsc --noEmit && vite build --mode production && node build-postprocess.js",
-    "build:dev": "tsc --noEmit && vite build --mode development && node build-postprocess.js",
+    "build:clean": "if exist dist rmdir /s /q dist && if exist node_modules\\.vite rmdir /s /q node_modules\\.vite && npm run build",
     "dev:https": "cross-env HTTPS=true vite",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
