--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,19 @@
 name = "herbalshop"
 compatibility_date = "2025-05-01"
 
-[site]
-bucket = "./dist"
+# Cloudflare Pages 配置
+pages_build_output_dir = "dist"
 
+# 构建配置
+[build]
+command = "npm run build"
+
+# 路由重定向规则
 [[redirects]]
 from = "/herbalShop/*"
 to = "/herbalShop/index.html"
 status = 200
 
-[build]
-command = "npm run build"
+# 环境变量（如果需要）
+[env.production]
+# 在这里添加生产环境变量
