feat: optimize for Telegram Mini App deployment

--- a/.env.telegram
+++ b/.env.telegram
@@ -1,6 +1,7 @@
-VITE_API_WORKER_URL=https://herbalshop-api-worker.ghostg-g.workers.dev
-VITE_R2_IMAGE_HANDLER_URL=https://herbalshop-image-handler.ghostg-g.workers.dev
-
-VITE_BASE_URL=./
-VITE_API_URL=https://herbalshop.365idesign.uk
+# Telegram Mini App 专用配置
 VITE_MODE=telegram
+VITE_BASE_URL=./
+VITE_API_URL=https://herbalshop-api.your-worker.workers.dev
+VITE_R2_URL=https://herbalshop-images.your-worker.workers.dev
+VITE_TELEGRAM_BOT_NAME=YourBotName
+VITE_APP_ENV=production
