--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,6 @@ name = "herbalshop-telegram"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "dist"
 
-# Telegram Mini App 专用配置
-[env.production]
+[env.production.vars]
 VITE_MODE = "telegram"
-VITE_BASE_URL = "./"
+NODE_ENV = "telegram"
