--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
   "main": "index.js",
   "scripts": {
     "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
-    "dev": "vite",
-    "build": "tsc --noEmit && vite build --mode telegram && node build-postprocess.js --telegram",
-    "build:web": "tsc --noEmit && vite build --mode production && node build-postprocess.js",
-    "build:telegram": "tsc --noEmit && vite build --mode telegram && node build-postprocess.js --telegram",
-    "build:clean": "if exist dist rmdir /s /q dist && if exist node_modules\\.vite rmdir /s /q node_modules\\.vite && npm run build",
-    "build:cloudflare": "tsc --noEmit && vite build --mode production && node build-postprocess.js",
-    "deploy:telegram": "npm run build:telegram && echo 'Telegram Mini App build ready for Cloudflare Pages deployment'",
-    "preview:telegram": "cross-env NODE_ENV=telegram vite preview --mode telegram",
-    "dev:https": "cross-env HTTPS=true vite",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "dev": "vite --mode development",
+    "build": "npm run build:telegram",
+    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram && cp _routes.json dist/",
+    "build:cloudflare": "vite build --mode production && node build-postprocess.js && cp _routes.json dist/",
+    "build:clean": "rimraf dist",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "dev:api": "cd workers/api-worker && wrangler dev",
