修复 _headers 文件格式

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev": "vite --mode development",
     "build": "npm run build:telegram",
-    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram && cp _routes.json dist/",
-    "build:cloudflare": "vite build --mode production && node build-postprocess.js && cp _routes.json dist/",
+    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram && copy _routes.json dist\\",
+    "build:cloudflare": "vite build --mode production && node build-postprocess.js && copy _routes.json dist\\",
     "build:clean": "rimraf dist",
     "preview": "vite preview",
     "predeploy": "npm run build",
@@ -45,6 +45,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.1.1",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1",
     "terser": "^5.39.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
