跨平台文件复制函数

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev": "vite --mode development",
     "build": "npm run build:telegram",
-    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram && copy _routes.json dist\\",
-    "build:cloudflare": "vite build --mode production && node build-postprocess.js && copy _routes.json dist\\",
+    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram",
+    "build:cloudflare": "vite build --mode production && node build-postprocess.js",
     "build:clean": "rimraf dist",
     "preview": "vite preview",
     "predeploy": "npm run build",
