--- a/package.json
+++ b/package.json
@@ -9,49 +9,17 @@
     "dev": "vite --mode development",
     "build": "npm run build:app && npm run build:worker",
     "build:app": "vite build --mode production",
-    "build:cloudflare": "vite build --mode production && node build-postprocess.js",
+    "build:worker": "echo 'Worker build completed - static assets ready'",
+    "build:telegram": "vite build --mode telegram && node build-postprocess.js --telegram",
     "build:clean": "rimraf dist",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "deploy": "npm run build && wrangler deploy",
+    "deploy:workers": "npm run build && wrangler deploy",
+    "dev:workers": "wrangler dev",
+    "dev:local": "wrangler dev --local",
+    "logs": "wrangler tail",
     "dev:api": "cd workers/api-worker && wrangler dev",
     "dev:r2": "cd workers/image-handler-worker && wrangler dev --port 8788",
-    "dev:all": "npm-run-all --parallel dev dev:api dev:r2",
-    "deploy:r2": "cd workers/image-handler-worker && wrangler deploy",
-    "deploy:api": "cd workers/api-worker && wrangler deploy",
-    "deploy:workers": "npm run deploy:api && npm run deploy:r2",
-    "deploy:all": "npm run build && npm run deploy:workers && npm run deploy"
-  },
-  "dependencies": {
-    "@telegram-apps/sdk": "^3.9.2",
-    "@telegram-apps/sdk-react": "^3.2.4",
-    "@types/react-transition-group": "^4.4.12",
-    "@vitejs/plugin-basic-ssl": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "react-swipeable": "^7.0.2",
-    "react-transition-group": "^4.4.5"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250604.0",
-    "@types/node": "^22.15.21",
-    "@types/react": "^18.3.22",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.4.1",
-    "@vitejs/plugin-react-swc": "^3.8.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.23.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "gh-pages": "^6.1.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
-    "terser": "^5.39.2",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0",
-    "vite": "^6.2.4",
-    "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "dev:all": "npm-run-all --parallel dev dev:api dev:r2"
   }
 }
