--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev": "vite --mode development",
     "build": "npm run build:app && npm run build:worker",
     "build:app": "vite build --mode production",
@@ -15,11 +14,27 @@
     "preview": "vite preview",
     "deploy": "npm run build && wrangler deploy",
     "deploy:workers": "npm run build && wrangler deploy",
+    "deploy:pages": "gh-pages -d dist --repo git@github.com:TuningZhou/herbalShop.git",
     "dev:workers": "wrangler dev",
     "dev:local": "wrangler dev --local",
     "logs": "wrangler tail",
     "dev:api": "cd workers/api-worker && wrangler dev",
     "dev:r2": "cd workers/image-handler-worker && wrangler dev --port 8788",
     "dev:all": "npm-run-all --parallel dev dev:api dev:r2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.0",
+    "wrangler": "^3.0.0",
+    "gh-pages": "^5.0.0",
+    "rimraf": "^5.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
