--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.0",
     "wrangler": "^3.0.0",
