--- a/package.json
+++ b/package.json
@@ -23,18 +23,25 @@
     "dev:all": "npm-run-all --parallel dev dev:api dev:r2"
   },
   "dependencies": {
+    "@telegram-apps/sdk": "^3.9.2",
+    "@telegram-apps/sdk-react": "^3.2.4",
+    "@types/react-transition-group": "^4.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.0.0"
+    "react-router-dom": "^6.20.0",
+    "react-swipeable": "^7.0.2",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitejs/plugin-basic-ssl": "^1.0.0",
-    "vite-plugin-svgr": "^3.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.0",
+    "terser": "^5.39.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.3.4",
+    "vite-plugin-mkcert": "^1.17.8",
+    "vite-plugin-svgr": "^4.3.0",
     "wrangler": "^3.0.0",
     "gh-pages": "^5.0.0",
     "rimraf": "^5.0.0",
